--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <!-- Google tag (gtag.js)
+        Google tag (gtag.js)
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJQFHNHJE5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -9,7 +9,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-DJQFHNHJE5');
-    </script> -->
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
